fix broken UI caused by package updates

--- a/packages/app/src/index.css
+++ b/packages/app/src/index.css
@@ -26,6 +26,9 @@
   .select__content[data-expanded] {
     @apply animate-fade-in;
   }
+  .select__content[data-closed] {
+    @apply animate-fade-in;
+  }
   .select__listbox {
     @apply max-h-[360px] overflow-y-auto p-2;
   }
